fix: forms submit, shift text on hover, links

--- a/src/styles/blocks/_aside.scss
+++ b/src/styles/blocks/_aside.scss
@@ -36,6 +36,10 @@
       cursor: pointer;
       text-align: center;
 
+      &:visited {
+        color: black;
+      }
+
       &:hover {
         font-weight: 700;
       }
@@ -43,7 +47,6 @@
       &::before {
         display: block;
         content: attr(data-text);
-        // content: attr(data-text) / "";
         font-weight: 700;
         height: 0;
         overflow: hidden;
