--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -31,6 +31,20 @@
       margin-right: 20px;
       color: $slateGray;
       text-transform: uppercase;
+
+      &:hover {
+        color: black;
+        font-weight: 400;
+      }
+
+      &::before {
+        display: block;
+        content: attr(data-text);
+        font-weight: 400;
+        height: 0;
+        overflow: hidden;
+        visibility: hidden;
+      }
     }
 
     &-lang {
@@ -51,6 +65,11 @@
         font-size: 14px;
         font-weight: 300;
         line-height: 18px;
+
+        &:hover {
+          color: black;
+          font-weight: 400;
+        }
       }
     }
 
@@ -98,4 +117,3 @@
     }
   }
 }
-
